<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sruly.stu.gmach.NewLoan"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_loan_first_name_field"
        android:hint="@string/new_loan_first_name_field_hint"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_loan_last_name_field"
        android:hint="@string/new_loan_last_name_field_hint"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_loan_user_id_field"
        android:hint="@string/new_loan_user_id_field_hint"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_loan_amount_field"
        android:hint="@string/new_loan_enter_amount_field_hint"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/new_loan_return_Date_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_loan_return_date_field_hint"
        android:inputType="datetime" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_loan_save_btn"
        android:text="@string/new_loan_save_btn_text"/>

</LinearLayout>
